# material-symbols-rs

./: Cargo.toml  LICENSE-MIT  build.rs
src/: lib.rs
